src/test/ui/nll/region-outlives-error-msg.stderr
error[E0999]: The region for the argument `self` does not outlive the region `'data`. Required due to this expression:
  --> $DIR/region-outlives-error-msg.rs:24:13
   |
LL |         let next = 22;
   |             ^^^^
   |
note: the too-short region is created here
  --> $DIR/region-outlives-error-msg.rs:23:18
   |
LL |     fn cookie_me(&self, _: &i32) -> Cookie<'data> {
   |                  ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0999`.
